# comidanamesa

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  runserver.sh  walkthrough.md
.github/prompts/: plan-familiaStatsReports.prompt.md  plan-graficosEstatisticas.prompt.md
apps/bsdi/: IMPLEMENTATION.md  README.md  admin.py  apps.py  models.py  test_exporter.py  urls.py  views.py
apps/bsdi/migrations/: 0001_initial.py
apps/bsdi/services/: __init__.py  exporter.py
apps/cecad/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/cecad/migrations/: 0001_initial.py  0002_importbatch_alter_familia_cod_familiar_fam_and_more.py  0003_remove_beneficio_import_batch_and_more.py  0004_importbatch_error_message_importbatch_processed_rows_and_more.py  0005_pessoa_cod_sexo_pessoa.py  0006_familia_ref_cad_familia_ref_pbf.py  0007_importbatch_batch_type.py  0008_alter_familia_unique_together_and_more.py  0009_pessoatransferhistory.py
apps/cecad/services/: importer.py
apps/cecad/tests/: test_permissions.py  (+1 more)
apps/core/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
comidanamesa/: asgi.py  settings.py  urls.py  wsgi.py
docs/: choices.json  dicionariotudo.csv  field_summary.md  implementation_plan.md
docs/priority_fields/: priority_fields.json  priority_fields.md
nginx/: nginx.conf
templates/: 403.html  404.html  500.html
tests/: test_eligibility.py  test_familia_stats.py
(+62 files in other folders)
