[project]
name = "comidanamesa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "python-dotenv>=1.2.1",
    "dj-database-url>=1.0.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.5",
]
